@@ -1,3 +1,10 @@
+2011-09-15  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclCompExpr.c: [Bug 3408408] Partial improvement by 
+	sharing as literals the computed values of constant subexpressions
+	when we can do so without incurring the cost of string rep
+	generation.
+
 2011-09-13  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclUtil.c:	[Bug 3390638] Workaround broken solaris
